[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/TSCN/UnitInfo_Panel/Information_Panel.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Pacifico.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/TSCN/UnitInfo_Panel/Label_Name.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/Theme_Komika20.tres" type="Theme" id=4]
[ext_resource path="res://Assets/TSCN/UnitInfo_Panel/Label_Damage.gd" type="Script" id=5]
[ext_resource path="res://Assets/TSCN/UnitInfo_Panel/Label_HP.gd" type="Script" id=6]
[ext_resource path="res://Assets/TSCN/UnitInfo_Panel/Label_Initiative.gd" type="Script" id=7]
[ext_resource path="res://Assets/TSCN/UnitInfo_Panel/Label_Displacement.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Information_Panel" type="Node2D"]
z_index = 45
script = ExtResource( 1 )

[node name="ColorRect_bord" type="ColorRect" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 208.0
margin_bottom = 176.0
color = Color( 0.188235, 0.141176, 0.0627451, 1 )

[node name="ColorRect_fond" type="ColorRect" parent="ColorRect_bord"]
margin_left = 8.0
margin_top = 8.0
margin_right = 216.0
margin_bottom = 184.0
color = Color( 0, 0, 0, 1 )

[node name="Label_Name" type="Label" parent="."]
margin_top = -8.0
margin_right = 192.0
margin_bottom = 31.0
theme = SubResource( 2 )
text = "Name"
script = ExtResource( 3 )

[node name="Label_Damage" type="Label" parent="."]
margin_top = 40.0
margin_right = 192.0
margin_bottom = 73.0
theme = ExtResource( 4 )
text = "Damages"
script = ExtResource( 5 )

[node name="Label_HP" type="Label" parent="."]
margin_top = 72.0
margin_right = 192.0
margin_bottom = 105.0
theme = ExtResource( 4 )
text = "HP"
script = ExtResource( 6 )

[node name="Label_Initiative" type="Label" parent="."]
margin_top = 104.0
margin_right = 192.0
margin_bottom = 137.0
theme = ExtResource( 4 )
text = "Initiative"
script = ExtResource( 7 )

[node name="Label_Displacement" type="Label" parent="."]
margin_top = 136.0
margin_right = 192.0
margin_bottom = 169.0
theme = ExtResource( 4 )
text = "Displacement"
script = ExtResource( 8 )
